<resources>
    <string name="app_name">temperature converter</string>
    <string name="ce">CE</string>
    <string name="c_f">C-F</string>
    <string name="f_c">F-C</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_0">0</string>
    <string name="decimal">.</string>
    <string name="delete">Delete</string>
    <string name="temperature_converter">Temperature Converter</string>
</resources>